HW13. dto для Event. Отделение слоя storage от остальных
