# hw12_13_14_15_calendar/docs/swagger.json
@@ -42,19 +42,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.EventListResponseWrapper"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -78,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.eventRequest"
+                            "$ref": "#/definitions/dto.EventData"
                         }
                     }
                 ],
@@ -92,13 +92,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -122,7 +122,7 @@
                         "type": "string",
                         "format": "date",
                         "example": "2024-07-24",
-                        "description": "Дата начала",
+                        "description": "Дата",
                         "name": "date",
                         "in": "query",
                         "required": true
@@ -132,19 +132,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.EventListResponseWrapper"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -178,19 +178,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.EventListResponseWrapper"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -224,19 +224,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.EventListResponseWrapper"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -268,19 +268,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.EventResponseWrapper"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -311,7 +311,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.eventRequest"
+                            "$ref": "#/definitions/dto.EventData"
                         }
                     }
                 ],
@@ -325,13 +325,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -367,13 +367,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/internalhttp.Response"
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -396,19 +396,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/internalhttp.Response"
                         }
                     },
                     "503": {
                         "description": "Service Unavailable",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/internalhttp.ErrorResponseWrapper"
                         }
                     }
                 }
@@ -648,6 +642,86 @@
         }
     },
     "definitions": {
+        "dto.EventData": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "userID": {
+                    "type": "string"
+                }
+            }
+        },
+        "internalhttp.ErrorResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "requestId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internalhttp.EventListResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.EventData"
+                    }
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "requestId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internalhttp.EventResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.EventData"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "requestId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "internalhttp.Response": {
             "type": "object",
             "properties": {
@@ -663,26 +737,6 @@
                 },
                 "status": {
                     "type": "integer"
-                }
-            }
-        },
-        "internalhttp.eventRequest": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "endTime": {
-                    "type": "string"
-                },
-                "startTime": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "userId": {
-                    "type": "string"
                 }
             }
         },
