# hw12_13_14_15_calendar/internal/dto/event_data.go
@@ -1,0 +1,14 @@
+package dto
+
+import (
+	"github.com/google/uuid"
+	"time"
+)
+
+type EventData struct {
+	Title       string
+	Description string
+	StartTime   time.Time
+	EndTime     time.Time
+	UserID      uuid.UUID
+}
